Added profile photo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/LinkedIn Headshot.jpg" alt="" /></a>
 					<h1><strong>Maristella Heo</strong></h1>
 					<h3><em>Mechanical Engineering Student at Northwestern University</em></h3>
 				</div>
