Updated about section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/LinkedIn Headshot.jpg" alt="" /></a>
 					<h1><strong>Maristella Heo</strong></h1>
-					<h3><em>Mechanical Engineering Student at Northwestern University</em></h3>
+					<p><h3><em>Mechanical Engineering Student at Northwestern University</em></h3></p>
 				</div>
 			</header>
 
@@ -28,10 +28,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>I’m an undergraduate engineering student at Northwestern University with a passion for solving complex problems and driving innovation. From revamping an EV chassis for Northwestern’s Formula team to developing AR and AI-powered solutions, I thrive on creating impactful designs that push the norm.</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>I’m a mechanical engineer with a concentration in robotics, passionate about integrating mechanical, electrical, and software systems to drive innovation. Through my internships at Stellantis and Janicki Industries, I’ve gained hands-on experience in design, prototyping, and manufacturing, thriving in fast-paced environments where problem-solving is key. As the youngest Chassis Lead in Northwestern Formula Racing history, I led the frame design process to its earliest manufacturing release in the team’s 16-year history, setting a new standard for efficiency. My technical background includes SolidWorks and machining, supported by coursework in robot design, feedback systems, and electronic system design. I enjoy tackling complex engineering challenges and am always looking for opportunities to apply my skills in dynamic, fast-moving environments.
+						</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
