Added resume button to index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<p>I’m a mechanical engineer with a concentration in robotics, passionate about integrating mechanical, electrical, and software systems to drive innovation. Through my internships at Stellantis and Janicki Industries, I’ve gained hands-on experience in design, prototyping, and manufacturing, thriving in fast-paced environments where problem-solving is key. As the youngest Chassis Lead in Northwestern Formula Racing history, I led the frame design process to its earliest manufacturing release in the team’s 16-year history, setting a new standard for efficiency. My technical background includes SolidWorks and machining, supported by coursework in robot design, feedback systems, and electronic system design. I enjoy tackling complex engineering challenges and am always looking for opportunities to apply my skills in dynamic, fast-moving environments.
 						</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><href="resume.html" class="button">See My Resume</a></li>
 						</ul>
 					</section>
 
