Added favicon to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<head>
 		<title>Maristella Heo</title>
 		<meta charset="utf-8" />
+		<link rel="icon" href="images/Name Logo.png" type="image/png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
