Updated description in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/LinkedIn Headshot.jpg" alt="" /></a>
 					<h1><strong>Maristella Heo</strong></h1>
-					<p><h3><em>Mechanical Engineering Student at Northwestern University</em></h3></p>
+					<h3><em>Mechanical Engineering Student at Northwestern University</em></h3>
 				</div>
 			</header>
 
@@ -31,7 +31,7 @@
 						<header class="major">
 							<h2>I’m an undergraduate engineering student at Northwestern University with a passion for solving complex problems and driving innovation. From revamping an EV chassis for Northwestern’s Formula team to developing AR and AI-powered solutions, I thrive on creating impactful designs that push the norm.</h2>
 						</header>
-						<p>I’m a mechanical engineer with a concentration in robotics, passionate about integrating mechanical, electrical, and software systems to drive innovation. Through my internships at Stellantis and Janicki Industries, I’ve gained hands-on experience in design, prototyping, and manufacturing, thriving in fast-paced environments where problem-solving is key. As the youngest Chassis Lead in Northwestern Formula Racing history, I led the frame design process to its earliest manufacturing release in the team’s 16-year history, setting a new standard for efficiency. My technical background includes SolidWorks and machining, supported by coursework in robot design, feedback systems, and electronic system design. I enjoy tackling complex engineering challenges and am always looking for opportunities to apply my skills in dynamic, fast-moving environments.
+						<p>I’m a mechanical engineer with a concentration in robotics, passionate about integrating mechanical, electrical, and software systems to drive innovation. Through my internships at Stellantis and Janicki Industries, I’ve gained hands-on experience in design, prototyping, and manufacturing, thriving in fast-paced environments where problem-solving is key.
 						</p>
 						<ul class="actions">
 							<li><a href="https://drive.google.com/file/d/1zhcV79jaBF5O0R2ovHJ6QpSNQ2qT31_f/view?usp=sharing" class="button">See My Resume</a></li>
