--- a/index.html
+++ b/index.html
@@ -1132,25 +1132,34 @@
                     <div class="gallery-container">
                         <!-- Photo slides - Add your photos here -->
                         <div class="gallery-slide active">
-                            <img src="photo1.jpg" alt="Maristella Heo - Professional Photo" 
+                            <img src="images/LinkedIn_Headshot.jpg" alt="Maristella Heo - Professional Photo" 
                                  onerror="this.parentElement.innerHTML='<div class=&quot;gallery-placeholder&quot;><i class=&quot;fas fa-user&quot;></i><div><strong>Add Your Photos</strong><br>photo1.jpg, photo2.jpg, photo3.jpg, etc.</div></div>'">
                         </div>
                         <div class="gallery-slide">
-                            <img src="photo2.jpg" alt="Maristella Heo - Formula Racing" 
+                            <img src="images/NFR24_Side_Panels.jpg" alt="Maristella Heo - Formula Racing" 
                                  onerror="this.parentElement.innerHTML='<div class=&quot;gallery-placeholder&quot;><i class=&quot;fas fa-car&quot;></i><div>Formula Racing Photo</div></div>'">
                         </div>
                         <div class="gallery-slide">
-                            <img src="photo3.jpg" alt="Maristella Heo - Engineering Project" 
+                            <img src="images/NFR25_Cost_Event.jpg" alt="Maristella Heo - Engineering Project" 
                                  onerror="this.parentElement.innerHTML='<div class=&quot;gallery-placeholder&quot;><i class=&quot;fas fa-cog&quot;></i><div>Engineering Project Photo</div></div>'">
                         </div>
                         <div class="gallery-slide">
-                            <img src="photo4.jpg" alt="Maristella Heo - Northwestern University" 
+                            <img src="images/NFR25_Design_Judge.JPG" alt="Maristella Heo - Northwestern University" 
                                  onerror="this.parentElement.innerHTML='<div class=&quot;gallery-placeholder&quot;><i class=&quot;fas fa-university&quot;></i><div>Northwestern Photo</div></div>'">
                         </div>
                         <div class="gallery-slide">
-                            <img src="photo5.jpg" alt="Maristella Heo - Robotics Work" 
+                            <img src="images/NFR25_Team_Photo.jpg" alt="Maristella Heo - Robotics Work" 
                                  onerror="this.parentElement.innerHTML='<div class=&quot;gallery-placeholder&quot;><i class=&quot;fas fa-robot&quot;></i><div>Robotics Project Photo</div></div>'">
                         </div>
+                        <div class="gallery-slide">
+                            <img src="images/Unveil.JPG" alt="Maristella Heo - Robotics Work" 
+                                 onerror="this.parentElement.innerHTML='<div class=&quot;gallery-placeholder&quot;><i class=&quot;fas fa-robot&quot;></i><div>Robotics Project Photo</div></div>'">
+                        </div>
+                        <div class="gallery-slide">
+                            <img src="images/Walking_NFR25.jpg" alt="Maristella Heo - Robotics Work" 
+                                 onerror="this.parentElement.innerHTML='<div class=&quot;gallery-placeholder&quot;><i class=&quot;fas fa-robot&quot;></i><div>Robotics Project Photo</div></div>'">
+                        </div>
+
 
                         <!-- Navigation arrows -->
                         <button class="gallery-nav prev" onclick="changeSlide(-1)">
