--- a/index.html
+++ b/index.html
@@ -1132,25 +1132,25 @@
                     <div class="gallery-container">
                         <!-- Photo slides - Add your photos here -->
                         <div class="gallery-slide active">
-                            <img src="images/LinkedIn_Headshot.jpg" alt="Maristella Heo - Professional Photo" 
+                            <img src="images/LinkedIn_Headshot.jpg" alt="Maristella Heo - Professional Photo" >
                         </div>
                         <div class="gallery-slide">
-                            <img src="images/NFR24_Side_Panels.jpg" alt="Maristella Heo - Formula Racing" 
+                            <img src="images/NFR24_Side_Panels.jpg" alt="Maristella Heo - Formula Racing" >
                         </div>
                         <div class="gallery-slide">
-                            <img src="images/NFR25_Cost_Event.jpg" alt="Maristella Heo - Engineering Project" 
+                            <img src="images/NFR25_Cost_Event.jpg" alt="Maristella Heo - Engineering Project" >
                         </div>
                         <div class="gallery-slide">
-                            <img src="images/NFR25_Design_Judge.JPG" alt="Maristella Heo - Northwestern University" 
+                            <img src="images/NFR25_Design_Judge.JPG" alt="Maristella Heo - Northwestern University" >
                         </div>
                         <div class="gallery-slide">
-                            <img src="images/NFR25_Team_Photo.jpg" alt="Maristella Heo - Robotics Work" 
+                            <img src="images/NFR25_Team_Photo.jpg" alt="Maristella Heo - Robotics Work" >
                         </div>
                         <div class="gallery-slide">
-                            <img src="images/Unveil.JPG" alt="Maristella Heo - Robotics Work" 
+                            <img src="images/Unveil.JPG" alt="Maristella Heo - Robotics Work" >
                         </div>
                         <div class="gallery-slide">
-                            <img src="images/Walking_NFR25.jpg" alt="Maristella Heo - Robotics Work" 
+                            <img src="images/Walking_NFR25.jpg" alt="Maristella Heo - Robotics Work" >
                         </div>
 
 
