--- a/index.html
+++ b/index.html
@@ -1137,25 +1137,25 @@
         <div class="gallery-container">
             <!-- Photo slides -->
             <div class="gallery-slide active">
-                <img src="images/LinkedIn_Headshot.jpg" alt="Professional Headshot" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-user-circle></i><strong>Professional Headshot</strong><span>LinkedIn Profile Photo</span></div>';">
+                <img src="images/LinkedIn_Headshot.jpg" alt="Professional Headshot" onerror="this.parentNode.innerHTML='<i class=fas fa-user-circle></i><strong>Professional Headshot</strong><span>LinkedIn Profile Photo</span></div>';">
             </div>
             <div class="gallery-slide">
-                <img src="images/NFR24_Side_Panels.jpg" alt="Formula Racing" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-car-side></i><strong>Formula Racing</strong><span>Working on NFR24 Side Panels</span></div>';">
+                <img src="images/NFR24_Side_Panels.jpg" alt="Formula Racing" onerror="this.parentNode.innerHTML='<i class=fas fa-car-side></i><strong>Formula Racing</strong><span>Working on NFR24 Side Panels</span></div>';">
             </div>
             <div class="gallery-slide">
-                <img src="images/NFR25_Cost_Event.jpg" alt="Competition" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-trophy></i><strong>Competition</strong><span>NFR25 Cost Event</span></div>';">
+                <img src="images/NFR25_Cost_Event.jpg" alt="Competition" onerror="this.parentNode.innerHTML='<i class=fas fa-trophy></i><strong>Competition</strong><span>NFR25 Cost Event</span></div>';">
             </div>
             <div class="gallery-slide">
-                <img src="images/NFR25_Design_Judge.JPG" alt="Design Judge" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-handshake></i><strong>Design Judge</strong><span>NFR25 Design Presentation</span></div>';">
+                <img src="images/NFR25_Design_Judge.JPG" alt="Design Judge" onerror="this.parentNode.innerHTML='<i class=fas fa-handshake></i><strong>Design Judge</strong><span>NFR25 Design Presentation</span></div>';">
             </div>
             <div class="gallery-slide">
-                <img src="images/NFR25_Team_Photo.jpg" alt="Team Photo" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-users></i><strong>Team Photo</strong><span>NFR25 Team</span></div>';">
+                <img src="images/NFR25_Team_Photo.jpg" alt="Team Photo" onerror="this.parentNode.innerHTML='<i class=fas fa-users></i><strong>Team Photo</strong><span>NFR25 Team</span></div>';">
             </div>
             <div class="gallery-slide">
-                <img src="images/Unveil.JPG" alt="Car Unveil" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-eye></i><strong>Car Unveil</strong><span>NFR25 Car Reveal</span></div>';">
+                <img src="images/Unveil.JPG" alt="Car Unveil" onerror="this.parentNode.innerHTML='<i class=fas fa-eye></i><strong>Car Unveil</strong><span>NFR25 Car Reveal</span></div>';">
             </div>
             <div class="gallery-slide">
-                <img src="images/Walking_NFR25.jpg" alt="Track Walk" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-walking></i><strong>Track Walk</strong><span>Walking NFR25</span></div>';">
+                <img src="images/Walking_NFR25.jpg" alt="Track Walk" onerror="this.parentNode.innerHTML='<i class=fas fa-walking></i><strong>Track Walk</strong><span>Walking NFR25</span></div>';">
             </div>
 
             <!-- Navigation arrows -->
@@ -1186,26 +1186,6 @@
 
     <!-- Hero Section -->
     <section class="hero" id="home">
-        <div class="container">
-            <div class="hero-content">
-                <h1>Maristella (Stella) Heo</h1>
-                <p class="subtitle">Mechanical Engineering Student</p>
-                <p class="university">Northwestern University • 3.99 GPA • Dean's List</p>
-                <p class="description">Passionate undergraduate engineer with expertise in Formula SAE racing, robotics, manufacturing automation, and AI-powered solutions. From leading 75+ member teams to developing cutting-edge robotic systems, I drive innovation through hands-on engineering excellence.</p>
-                <div class="cta-buttons">
-                    <a href="#projects" class="btn">
-                        <i class="fas fa-rocket"></i>
-                        View My Projects
-                    </a>
-                    <a href="#contact" class="btn btn-outline">
-                        <i class="fas fa-envelope"></i>
-                        Get In Touch
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
         <div class="container">
             <div class="hero-content">
                 <h1>Maristella (Stella) Heo</h1>
