--- a/index.html
+++ b/index.html
@@ -1132,60 +1132,58 @@
 
     <!-- Hero Section -->
     <section class="hero" id="home">
-       <!-- Photo Gallery Banner -->
-    <section class="photo-gallery-banner">
-        <div class="gallery-container">
-            <!-- Photo slides -->
-            <div class="gallery-slide active">
+        <!-- Photo Gallery Banner -->
+        <div class="photo-gallery">
+            <div class="gallery-container">
+                <!-- Photo slides - Using placeholder content since images aren't available -->
+                <div class="gallery-slide active">
                 <img src="images/LinkedIn_Headshot.jpg" alt="Professional Headshot" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-user-circle></i><strong>Professional Headshot</strong><span>LinkedIn Profile Photo</span></div>';">
-            </div>
-            <div class="gallery-slide">
-                <img src="images/NFR24_Side_Panels.jpg" alt="Formula Racing" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-car-side></i><strong>Formula Racing</strong><span>Working on NFR24 Side Panels</span></div>';">
-            </div>
-            <div class="gallery-slide">
-                <img src="images/NFR25_Cost_Event.jpg" alt="Competition" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-trophy></i><strong>Competition</strong><span>NFR25 Cost Event</span></div>';">
-            </div>
-            <div class="gallery-slide">
-                <img src="images/NFR25_Design_Judge.JPG" alt="Design Judge" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-handshake></i><strong>Design Judge</strong><span>NFR25 Design Presentation</span></div>';">
-            </div>
-            <div class="gallery-slide">
-                <img src="images/NFR25_Team_Photo.jpg" alt="Team Photo" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-users></i><strong>Team Photo</strong><span>NFR25 Team</span></div>';">
-            </div>
-            <div class="gallery-slide">
-                <img src="images/Unveil.JPG" alt="Car Unveil" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-eye></i><strong>Car Unveil</strong><span>NFR25 Car Reveal</span></div>';">
-            </div>
-            <div class="gallery-slide">
-                <img src="images/Walking_NFR25.jpg" alt="Track Walk" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-walking></i><strong>Track Walk</strong><span>Walking NFR25</span></div>';">
-            </div>
+                </div>
+                <div class="gallery-slide">
+                    <img src="images/NFR24_Side_Panels.jpg" alt="Formula Racing" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-car-side></i><strong>Formula Racing</strong><span>Working on NFR24 Side Panels</span></div>';">
+                </div>
+                <div class="gallery-slide">
+                    <img src="images/NFR25_Cost_Event.jpg" alt="Competition" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-trophy></i><strong>Competition</strong><span>NFR25 Cost Event</span></div>';">
+                </div>
+                <div class="gallery-slide">
+                    <img src="images/NFR25_Design_Judge.JPG" alt="Design Judge" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-handshake></i><strong>Design Judge</strong><span>NFR25 Design Presentation</span></div>';">
+                </div>
+                <div class="gallery-slide">
+                    <img src="images/NFR25_Team_Photo.jpg" alt="Team Photo" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-users></i><strong>Team Photo</strong><span>NFR25 Team</span></div>';">
+                </div>
+                <div class="gallery-slide">
+                    <img src="images/Unveil.JPG" alt="Car Unveil" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-eye></i><strong>Car Unveil</strong><span>NFR25 Car Reveal</span></div>';">
+                </div>
+                <div class="gallery-slide">
+                    <img src="images/Walking_NFR25.jpg" alt="Track Walk" onerror="this.parentNode.innerHTML='<div class=gallery-placeholder><i class=fas fa-walking></i><strong>Track Walk</strong><span>Walking NFR25</span></div>';">
+                </div>
 
-            <!-- Navigation arrows -->
-            <button class="gallery-nav prev" onclick="changeSlide(-1)">
-                <i class="fas fa-chevron-left"></i>
-            </button>
-            <button class="gallery-nav next" onclick="changeSlide(1)">
-                <i class="fas fa-chevron-right"></i>
-            </button>
+                <!-- Navigation arrows -->
+                <button class="gallery-nav prev" onclick="changeSlide(-1)">
+                    <i class="fas fa-chevron-left"></i>
+                </button>
+                <button class="gallery-nav next" onclick="changeSlide(1)">
+                    <i class="fas fa-chevron-right"></i>
+                </button>
 
-            <!-- Slide indicators -->
-            <div class="gallery-indicators">
-                <div class="indicator active" onclick="currentSlide(1)"></div>
-                <div class="indicator" onclick="currentSlide(2)"></div>
-                <div class="indicator" onclick="currentSlide(3)"></div>
-                <div class="indicator" onclick="currentSlide(4)"></div>
-                <div class="indicator" onclick="currentSlide(5)"></div>
-                <div class="indicator" onclick="currentSlide(6)"></div>
-                <div class="indicator" onclick="currentSlide(7)"></div>
-            </div>
+                <!-- Slide indicators -->
+                <div class="gallery-indicators">
+                    <div class="indicator active" onclick="currentSlide(1)"></div>
+                    <div class="indicator" onclick="currentSlide(2)"></div>
+                    <div class="indicator" onclick="currentSlide(3)"></div>
+                    <div class="indicator" onclick="currentSlide(4)"></div>
+                    <div class="indicator" onclick="currentSlide(5)"></div>
+                    <div class="indicator" onclick="currentSlide(6)"></div>
+                    <div class="indicator" onclick="currentSlide(7)"></div>
+                </div>
 
-            <!-- Photo counter -->
-            <div class="gallery-counter">
-                <span id="current-photo">1</span> / <span id="total-photos">7</span>
+                <!-- Photo counter -->
+                <div class="gallery-counter">
+                    <span id="current-photo">1</span> / <span id="total-photos">7</span>
+                </div>
             </div>
         </div>
-    </section>
 
-    <!-- Hero Section -->
-    <section class="hero" id="home">
         <div class="container">
             <div class="hero-content">
                 <h1>Maristella (Stella) Heo</h1>
